retoques de loslos links css

--- a/Destinos/Grecia.html
+++ b/Destinos/Grecia.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grecia - El Cuna de la Civilización Occidental</title>
     <link rel="icon" href="./../Imagenes/templo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_grecia.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles_Grecia.css" />
 </head>
 <body>
     <header>
         <section id="inicio">
-            <h1>¡Bienvenidos a Travel Partners!</h1>
+            <h1 id="titulo">¡Bienvenidos a Travel Partners!</h1>
 
             <nav>
                 <ul>
@@ -29,7 +29,7 @@
     <main>
         <nav id="paris_nav">
             <ul>
-                <li><a href="./Paris.html">Subir</a></li>
+                <li><a href="./Grecia.html">Subir</a></li>
                 <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#atractivos">Atracciones</a></li>
                 <li><a href="#itinerario">Itinerario</a></li>
@@ -47,7 +47,7 @@
         <section id="atractivos">
             <h2>Atracciones en Grecia</h2>
             <div class="gallery">
-                <div class="item small">
+                <div class="item large">
                     <img src="./../Imagenes/acropolis.jpg" alt="Acrópolis de Atenas" />
                     <div class="overlay">
                         <h3>Acrópolis de Atenas</h3>
@@ -74,7 +74,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="item small">
+                <div class="item large">
                     <img src="./../Imagenes/atenas.jpg" alt="Atenas" />
                     <div class="overlay">
                         <h3>Atenas</h3>
