--- a/Destinos/Nueva Zelanda.html
+++ b/Destinos/Nueva Zelanda.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nueva Zelanda - La Tierra de los Kiwis</title>
     <link rel="icon" href="./../Imagenes/kiwi.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_nueva zelanda.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles_nueva zelanda.css" />
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
     <main>
         <nav id="paris_nav">
             <ul>
-                <li><a href="./Paris.html">Subir</a></li>
+                <li><a href="./Nueva Zelanda.html">Subir</a></li>
                 <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#atractivos">Atracciones</a></li>
                 <li><a href="#itinerario">Itinerario</a></li>
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="item small">
+                <div class="item large">
                     <img src="./../Imagenes/monte_cook.jpg" alt="Monte Cook" />
                     <div class="overlay">
                         <h3>Monte Cook</h3>
