--- a/Destinos/Paris.html
+++ b/Destinos/Paris.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>París - La Ciudad del Amor</title>
     <link rel="icon" href="./../Imagenes/Paris.png" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_paris.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles_paris.css" />
   </head>
 
   <body>
