--- a/Destinos/kioto.html
+++ b/Destinos/kioto.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kioto</title>
     <link rel="icon" href="./../Imagenes/Kioto.png" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_Kioto.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles_Kioto.css" />
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
     <main>
       <nav id="kioto_nav">
         <ul>
-          <li><a href="./../index.html">Inicio</a></li>
+          <li><a href="./kioto.html">Inicio</a></li>
           <li><a href="#descripcion">Descripción</a></li>
           <li><a href="#atractivos">Atracciones</a></li>
           <li><a href="#itinerario">Itinerario</a></li>
@@ -98,7 +98,7 @@
               </p>
             </div>
           </div>
-          <div class="item small">
+          <div class="item large">
             <img src="./../Imagenes/Kiyomizu-dera.jpg" alt="Templo Kiyomizu-dera" width="400" height="300" />
             <div class="overlay">
               <h3>Templo Kiyomizu-dera</h3>
