--- a/Destinos/marruecos.html
+++ b/Destinos/marruecos.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marruecos - La Puerta al Desierto</title>
     <link rel="icon" href="./../Imagenes/camello.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_marruecos.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles_marruecos.css" />
   </head>
   <body>
     <header>
@@ -22,19 +22,17 @@
         </nav>
       </section>
 
-      <h1>Marruecos - La Puerta al Desierto</h1>
-      <!--<img
-        src="./../Imagenes/marruecos_principal.jpg"
-        alt="Imagen principal de Marruecos"
-        width="400"
-        height="300"
+      <h1 id="titulo">Marruecos - La Puerta al Desierto</h1>
+      <!--
       />-->
       
     </header>
     <main>
+
+      
       <nav id="marruecos_nav">
         <ul>
-          <li><a href="./Paris.html">Subir</a></li>
+          <li><a href="./marruecos.html">Subir</a></li>
           <li><a href="#descripcion">Descripción</a></li>
           <li><a href="#atractivos">Atracciones</a></li>
           <li><a href="#itinerario">Itinerario</a></li>
@@ -109,7 +107,7 @@
               </p>
             </div>
           </div>
-          <div class="item small">
+          <div class="item large">
             <img src="./../Imagenes/marrakech.jpg" alt="Marrakech" />
             <div class="overlay">
               <h3>Marrakech</h3>
