--- a/Destinos/Rio_de_janeiro.html
+++ b/Destinos/Rio_de_janeiro.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rio de Janeiro - La Ciudad Maravillosa</title>
     <link rel="icon" href="./../Imagenes/Cristo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_rio.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/styles_rio.css" />
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
     <main>
         <nav id="paris_nav">
             <ul>
-                <li><a href="./Paris.html">Subir</a></li>
+                <li><a href="./Rio_de_janeiro.html">Subir</a></li>
                 <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#atractivos">Atracciones</a></li>
                 <li><a href="#itinerario">Itinerario</a></li>
