ajustes de links[1]

--- a/Destinos/Grecia.html
+++ b/Destinos/Grecia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grecia - El Cuna de la Civilización Occidental</title>
     <link rel="icon" href="./../Imagenes/templo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
     <link rel="stylesheet" type="text/css" href="../Estilos/styles_Grecia.css" />
 </head>
 <body>
@@ -113,6 +113,8 @@
             <p>
                 El costo del viaje a Grecia varía según la duración, el tipo de alojamiento, las actividades y otros factores. Un viaje de una semana a Grecia puede costar entre $1000 y $3000 por persona, incluyendo el transporte, el alojamiento, la comida y las actividades. Los precios de los vuelos, los hoteles y las excursiones varían según la temporada, la ubicación y la disponibilidad. Es recomendable comparar precios y reservar con antelación para obtener las mejores ofertas.
             </p>
+            <a href="../Destinos/precios.html#costos Grecia">Leer más</a>
+
         </section>
     </main>
 </body>
