--- a/Destinos/Nueva Zelanda.html
+++ b/Destinos/Nueva Zelanda.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nueva Zelanda - La Tierra de los Kiwis</title>
     <link rel="icon" href="./../Imagenes/kiwi.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
     <link rel="stylesheet" type="text/css" href="../Estilos/styles_nueva zelanda.css" />
 </head>
 <body>
@@ -117,6 +117,7 @@
             <p>
                 Los costos de un viaje a Nueva Zelanda varían según la duración, la temporada y las actividades incluidas. Los vuelos desde Estados Unidos suelen tener un costo de entre $1,000 y $2,000, dependiendo de la aerolínea y la época del año. El alojamiento en hoteles de gama media puede costar entre $100 y $200 por noche, mientras que los hostales y albergues ofrecen opciones más económicas. Las comidas y actividades adicionales, como excursiones y alquiler de coches, también deben tenerse en cuenta al planificar el presupuesto del viaje.
             </p>
+            <a href="../Destinos/precios.html#costos nueva_zelanda">Leer más</a>
         </section>
 
     </main>
