--- a/Destinos/Paris.html
+++ b/Destinos/Paris.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>París - La Ciudad del Amor</title>
     <link rel="icon" href="./../Imagenes/Paris.png" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
-    <link rel="stylesheet" type="text/css" href="../Estilos/styles_paris.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/Styles_paris.css" />
   </head>
 
   <body>
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="item small">
-            <img src="./../Imagenes/Montmartre.jpg" alt="Montmartre" />
+            <img src="./../Imagenes/Montmartre.JPG" alt="Montmartre" />
             <div class="overlay">
               <h3>Montmartre</h3>
               <p>
@@ -178,7 +178,7 @@
             </li>
             <!-- Los otros elementos de la lista seguirían igual -->
         </ul>
-        <a href="../Destinos/precios.html">Leer más</a>
+        <a href="../Destinos/precios.html#costos paris">Leer más</a>
     </section>
     
     </main>
