--- a/Destinos/Rio_de_janeiro.html
+++ b/Destinos/Rio_de_janeiro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rio de Janeiro - La Ciudad Maravillosa</title>
     <link rel="icon" href="./../Imagenes/Cristo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
     <link rel="stylesheet" type="text/css" href="../Estilos/styles_rio.css" />
 </head>
 <body>
@@ -130,6 +130,8 @@
                 variar según las preferencias individuales y las ofertas
                 especiales.
             </p>
+            <a href="../Destinos/precios.html#costos Rio">Leer más</a>
+
         </section>
     </main>
     <footer>
