--- a/Destinos/marruecos.html
+++ b/Destinos/marruecos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marruecos - La Puerta al Desierto</title>
     <link rel="icon" href="./../Imagenes/camello.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../Estilos/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../Estilos/Styles.css" />
     <link rel="stylesheet" type="text/css" href="../Estilos/styles_marruecos.css" />
   </head>
   <body>
@@ -165,6 +165,8 @@
             actividades. Los costos pueden variar según las fechas de viaje y las
             preferencias personales.
         </p>
+        <a href="../Destinos/precios.html#costos_marruecos">Leer más</a>
+
       </section>
     </main>
   </body>
